# youcanpay

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test_youcanpay.py
src/ialog/: __init__.py  __main__.py  cli.py
src/youcanpay/: __init__.py  client.py
~/: .pypirc
